--- a/product/wine/index.html
+++ b/product/wine/index.html
@@ -124,8 +124,8 @@ img.emoji {
 	<form class="cart" action="http://localhost:7000/myproject/wordpress/product/wine/" method="post" enctype="multipart/form-data">
 		
 			<div class="quantity">
-				<label class="screen-reader-text" for="quantity_63465df129c3c">Wine quantity</label>
-		<input type="number" id="quantity_63465df129c3c" class="input-text qty text" step="1" min="1" max="300" name="quantity" value="1" title="Qty" size="4" placeholder="" inputmode="numeric" autocomplete="off">
+				<label class="screen-reader-text" for="quantity_634665ad476f2">Wine quantity</label>
+		<input type="number" id="quantity_634665ad476f2" class="input-text qty text" step="1" min="1" max="300" name="quantity" value="1" title="Qty" size="4" placeholder="" inputmode="numeric" autocomplete="off">
 			</div>
 	
 		<button type="submit" name="add-to-cart" value="1067" class="single_add_to_cart_button button alt">Add to cart</button>
@@ -213,7 +213,7 @@ img.emoji {
 <input type="hidden" name="comment_parent" id="comment_parent" value="0">
 </p>
 <p style="display: none;"><input type="hidden" id="akismet_comment_nonce" name="akismet_comment_nonce" value="7b36712301"></p>
-<p style="display: none !important;"><label>&#916;<textarea name="ak_hp_textarea" cols="45" rows="8" maxlength="100"></textarea></label><input type="hidden" id="ak_js_1" name="ak_js" value="72"><script>document.getElementById( "ak_js_1" ).setAttribute( "value", ( new Date() ).getTime() );</script></p>
+<p style="display: none !important;"><label>&#916;<textarea name="ak_hp_textarea" cols="45" rows="8" maxlength="100"></textarea></label><input type="hidden" id="ak_js_1" name="ak_js" value="95"><script>document.getElementById( "ak_js_1" ).setAttribute( "value", ( new Date() ).getTime() );</script></p>
 </form>	</div>
 <!-- #respond -->
 				</div>
