--- a/product/cappuccino/index.html
+++ b/product/cappuccino/index.html
@@ -124,8 +124,8 @@ img.emoji {
 	<form class="cart" action="http://localhost:7000/myproject/wordpress/product/cappuccino/" method="post" enctype="multipart/form-data">
 		
 			<div class="quantity">
-				<label class="screen-reader-text" for="quantity_634664728e949">Cappuccino quantity</label>
-		<input type="number" id="quantity_634664728e949" class="input-text qty text" step="1" min="1" max="300" name="quantity" value="1" title="Qty" size="4" placeholder="" inputmode="numeric" autocomplete="off">
+				<label class="screen-reader-text" for="quantity_6346a42ce95b3">Cappuccino quantity</label>
+		<input type="number" id="quantity_6346a42ce95b3" class="input-text qty text" step="1" min="1" max="300" name="quantity" value="1" title="Qty" size="4" placeholder="" inputmode="numeric" autocomplete="off">
 			</div>
 	
 		<button type="submit" name="add-to-cart" value="904" class="single_add_to_cart_button button alt">Add to cart</button>
@@ -196,7 +196,7 @@ img.emoji {
 <input type="hidden" name="comment_parent" id="comment_parent" value="0">
 </p>
 <p style="display: none;"><input type="hidden" id="akismet_comment_nonce" name="akismet_comment_nonce" value="1cc3c34e87"></p>
-<p style="display: none !important;"><label>&#916;<textarea name="ak_hp_textarea" cols="45" rows="8" maxlength="100"></textarea></label><input type="hidden" id="ak_js_1" name="ak_js" value="188"><script>document.getElementById( "ak_js_1" ).setAttribute( "value", ( new Date() ).getTime() );</script></p>
+<p style="display: none !important;"><label>&#916;<textarea name="ak_hp_textarea" cols="45" rows="8" maxlength="100"></textarea></label><input type="hidden" id="ak_js_1" name="ak_js" value="108"><script>document.getElementById( "ak_js_1" ).setAttribute( "value", ( new Date() ).getTime() );</script></p>
 </form>	</div>
 <!-- #respond -->
 				</div>
