--- a/product/italian-pizza/index.html
+++ b/product/italian-pizza/index.html
@@ -125,8 +125,8 @@ img.emoji {
 	<form class="cart" action="http://localhost:7000/myproject/wordpress/product/italian-pizza/" method="post" enctype="multipart/form-data">
 		
 			<div class="quantity">
-				<label class="screen-reader-text" for="quantity_634664872a6c6">Italian Pizza quantity</label>
-		<input type="number" id="quantity_634664872a6c6" class="input-text qty text" step="1" min="1" max="300" name="quantity" value="1" title="Qty" size="4" placeholder="" inputmode="numeric" autocomplete="off">
+				<label class="screen-reader-text" for="quantity_6346a43c61ad0">Italian Pizza quantity</label>
+		<input type="number" id="quantity_6346a43c61ad0" class="input-text qty text" step="1" min="1" max="300" name="quantity" value="1" title="Qty" size="4" placeholder="" inputmode="numeric" autocomplete="off">
 			</div>
 	
 		<button type="submit" name="add-to-cart" value="912" class="single_add_to_cart_button button alt">Add to cart</button>
@@ -197,7 +197,7 @@ img.emoji {
 <input type="hidden" name="comment_parent" id="comment_parent" value="0">
 </p>
 <p style="display: none;"><input type="hidden" id="akismet_comment_nonce" name="akismet_comment_nonce" value="c35d2dec58"></p>
-<p style="display: none !important;"><label>&#916;<textarea name="ak_hp_textarea" cols="45" rows="8" maxlength="100"></textarea></label><input type="hidden" id="ak_js_1" name="ak_js" value="87"><script>document.getElementById( "ak_js_1" ).setAttribute( "value", ( new Date() ).getTime() );</script></p>
+<p style="display: none !important;"><label>&#916;<textarea name="ak_hp_textarea" cols="45" rows="8" maxlength="100"></textarea></label><input type="hidden" id="ak_js_1" name="ak_js" value="113"><script>document.getElementById( "ak_js_1" ).setAttribute( "value", ( new Date() ).getTime() );</script></p>
 </form>	</div>
 <!-- #respond -->
 				</div>
