--- a/product/pizza-margherita/index.html
+++ b/product/pizza-margherita/index.html
@@ -150,8 +150,8 @@ img.emoji {
 <div class="woocommerce-variation-add-to-cart variations_button">
 	
 		<div class="quantity">
-				<label class="screen-reader-text" for="quantity_634664a3a1e87">Pizza margherita quantity</label>
-		<input type="number" id="quantity_634664a3a1e87" class="input-text qty text" step="1" min="1" max="" name="quantity" value="1" title="Qty" size="4" placeholder="" inputmode="numeric" autocomplete="off">
+				<label class="screen-reader-text" for="quantity_6346a450a2333">Pizza margherita quantity</label>
+		<input type="number" id="quantity_6346a450a2333" class="input-text qty text" step="1" min="1" max="" name="quantity" value="1" title="Qty" size="4" placeholder="" inputmode="numeric" autocomplete="off">
 			</div>
 	
 	<button type="submit" class="single_add_to_cart_button button alt">Add to cart</button>
@@ -251,7 +251,7 @@ img.emoji {
 <input type="hidden" name="comment_parent" id="comment_parent" value="0">
 </p>
 <p style="display: none;"><input type="hidden" id="akismet_comment_nonce" name="akismet_comment_nonce" value="257388fc99"></p>
-<p style="display: none !important;"><label>&#916;<textarea name="ak_hp_textarea" cols="45" rows="8" maxlength="100"></textarea></label><input type="hidden" id="ak_js_1" name="ak_js" value="208"><script>document.getElementById( "ak_js_1" ).setAttribute( "value", ( new Date() ).getTime() );</script></p>
+<p style="display: none !important;"><label>&#916;<textarea name="ak_hp_textarea" cols="45" rows="8" maxlength="100"></textarea></label><input type="hidden" id="ak_js_1" name="ak_js" value="192"><script>document.getElementById( "ak_js_1" ).setAttribute( "value", ( new Date() ).getTime() );</script></p>
 </form>	</div>
 <!-- #respond -->
 				</div>
