--- a/product/cappuccino/index.html
+++ b/product/cappuccino/index.html
@@ -165,8 +165,8 @@ var chaty_settings = {"ajax_url":"http:\/\/localhost:7000\/myproject\/wordpress\
 	<form class="cart" action="http://localhost:7000/myproject/wordpress/product/cappuccino/" method="post" enctype="multipart/form-data">
 		
 			<div class="quantity">
-				<label class="screen-reader-text" for="quantity_63589767eee9d">Cappuccino quantity</label>
-		<input type="number" id="quantity_63589767eee9d" class="input-text qty text" step="1" min="1" max="300" name="quantity" value="1" title="Qty" size="4" placeholder="" inputmode="numeric" autocomplete="off">
+				<label class="screen-reader-text" for="quantity_6358bb250c1f9">Cappuccino quantity</label>
+		<input type="number" id="quantity_6358bb250c1f9" class="input-text qty text" step="1" min="1" max="300" name="quantity" value="1" title="Qty" size="4" placeholder="" inputmode="numeric" autocomplete="off">
 			</div>
 	
 		<button type="submit" name="add-to-cart" value="904" class="single_add_to_cart_button button alt">Add to cart</button>
@@ -237,7 +237,7 @@ var chaty_settings = {"ajax_url":"http:\/\/localhost:7000\/myproject\/wordpress\
 <input type="hidden" name="comment_parent" id="comment_parent" value="0">
 </p>
 <p style="display: none;"><input type="hidden" id="akismet_comment_nonce" name="akismet_comment_nonce" value="8f46b0f93f"></p>
-<p style="display: none !important;"><label>&#916;<textarea name="ak_hp_textarea" cols="45" rows="8" maxlength="100"></textarea></label><input type="hidden" id="ak_js_1" name="ak_js" value="232"><script>document.getElementById( "ak_js_1" ).setAttribute( "value", ( new Date() ).getTime() );</script></p>
+<p style="display: none !important;"><label>&#916;<textarea name="ak_hp_textarea" cols="45" rows="8" maxlength="100"></textarea></label><input type="hidden" id="ak_js_1" name="ak_js" value="119"><script>document.getElementById( "ak_js_1" ).setAttribute( "value", ( new Date() ).getTime() );</script></p>
 </form>	</div>
 <!-- #respond -->
 				</div>
