--- a/product/king-burger/index.html
+++ b/product/king-burger/index.html
@@ -170,8 +170,8 @@ var chaty_settings = {"ajax_url":"http:\/\/localhost:7000\/myproject\/wordpress\
 	<form class="cart" action="http://localhost:7000/myproject/wordpress/product/king-burger/" method="post" enctype="multipart/form-data">
 		
 			<div class="quantity">
-				<label class="screen-reader-text" for="quantity_6358980724c53">King burger quantity</label>
-		<input type="number" id="quantity_6358980724c53" class="input-text qty text" step="1" min="1" max="300" name="quantity" value="1" title="Qty" size="4" placeholder="" inputmode="numeric" autocomplete="off">
+				<label class="screen-reader-text" for="quantity_6358bbca5abbb">King burger quantity</label>
+		<input type="number" id="quantity_6358bbca5abbb" class="input-text qty text" step="1" min="1" max="300" name="quantity" value="1" title="Qty" size="4" placeholder="" inputmode="numeric" autocomplete="off">
 			</div>
 	
 		<button type="submit" name="add-to-cart" value="918" class="single_add_to_cart_button button alt">Add to cart</button>
@@ -242,7 +242,7 @@ var chaty_settings = {"ajax_url":"http:\/\/localhost:7000\/myproject\/wordpress\
 <input type="hidden" name="comment_parent" id="comment_parent" value="0">
 </p>
 <p style="display: none;"><input type="hidden" id="akismet_comment_nonce" name="akismet_comment_nonce" value="de1bdea73a"></p>
-<p style="display: none !important;"><label>&#916;<textarea name="ak_hp_textarea" cols="45" rows="8" maxlength="100"></textarea></label><input type="hidden" id="ak_js_1" name="ak_js" value="33"><script>document.getElementById( "ak_js_1" ).setAttribute( "value", ( new Date() ).getTime() );</script></p>
+<p style="display: none !important;"><label>&#916;<textarea name="ak_hp_textarea" cols="45" rows="8" maxlength="100"></textarea></label><input type="hidden" id="ak_js_1" name="ak_js" value="116"><script>document.getElementById( "ak_js_1" ).setAttribute( "value", ( new Date() ).getTime() );</script></p>
 </form>	</div>
 <!-- #respond -->
 				</div>
