--- a/product/pizza-normal/index.html
+++ b/product/pizza-normal/index.html
@@ -186,8 +186,8 @@ var chaty_settings = {"ajax_url":"http:\/\/localhost:7000\/myproject\/wordpress\
 <div class="woocommerce-variation-add-to-cart variations_button">
 	
 		<div class="quantity">
-				<label class="screen-reader-text" for="quantity_63589824af220">Pizza (Normal) quantity</label>
-		<input type="number" id="quantity_63589824af220" class="input-text qty text" step="1" min="1" max="" name="quantity" value="1" title="Qty" size="4" placeholder="" inputmode="numeric" autocomplete="off">
+				<label class="screen-reader-text" for="quantity_6358bbe70132e">Pizza (Normal) quantity</label>
+		<input type="number" id="quantity_6358bbe70132e" class="input-text qty text" step="1" min="1" max="" name="quantity" value="1" title="Qty" size="4" placeholder="" inputmode="numeric" autocomplete="off">
 			</div>
 	
 	<button type="submit" class="single_add_to_cart_button button alt">Add to cart</button>
@@ -287,7 +287,7 @@ var chaty_settings = {"ajax_url":"http:\/\/localhost:7000\/myproject\/wordpress\
 <input type="hidden" name="comment_parent" id="comment_parent" value="0">
 </p>
 <p style="display: none;"><input type="hidden" id="akismet_comment_nonce" name="akismet_comment_nonce" value="2461d7f257"></p>
-<p style="display: none !important;"><label>&#916;<textarea name="ak_hp_textarea" cols="45" rows="8" maxlength="100"></textarea></label><input type="hidden" id="ak_js_1" name="ak_js" value="42"><script>document.getElementById( "ak_js_1" ).setAttribute( "value", ( new Date() ).getTime() );</script></p>
+<p style="display: none !important;"><label>&#916;<textarea name="ak_hp_textarea" cols="45" rows="8" maxlength="100"></textarea></label><input type="hidden" id="ak_js_1" name="ak_js" value="98"><script>document.getElementById( "ak_js_1" ).setAttribute( "value", ( new Date() ).getTime() );</script></p>
 </form>	</div>
 <!-- #respond -->
 				</div>
